[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omagent_core"
version = "0.0.1"
authors = [
    { name = "panregedit", email = "panregedit@gmail.com" },
]
description = "Core package for OMbots"
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "sqlmodel>=0.0.8",
  "pymysql>=1.0.3",
  "sqlalchemy-utils>=0.41.1",
  "httpx>=0.24.1",
  "tenacity>=8.2.3",
  "pyyaml>=6.0.1",
  "requests",
  "pymilvus>=2.4.6",
  "networkx>=3.2.1",
  "duckduckgo_search>=3.9.9",
  "bs4>=0.0.1",
  "pillow>=10.1.0",
  "geocoder>=1.38.1",
  "rich>=13.7.0",
  "jsonpath>=0.82.2",
  "jinja2>=3.1.2",
  "colorama>=0.4.6",
  "httpx[http2]",
  "openai>=1.23.2"
]

[project.urls]
"Homepage" = "https://git.linker.cc/research/misc/ombot_utils.git"