[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omagent_core"
version = "0.2.0"
authors = [
    { name = "OM AI Lab", email = "OmAIglobal2024@gmail.com" },
]
description = "Core package for OmAgent"
readme = "README.md"
requires-python = ">=3.10, <3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "sqlmodel>=0.0.8",
  "pymysql>=1.0.3",
  "sqlalchemy-utils>=0.41.1",
  "httpx>=0.24.1",
  "tenacity>=8.2.3",
  "pyyaml>=6.0.1",
  "pymilvus>=2.4.6",
  "networkx>=3.2.1",
  "duckduckgo_search>=3.9.9",
  "bs4>=0.0.1",
  "pillow>=10.1.0",
  "geocoder>=1.38.1",
  "rich>=13.7.0",
  "jsonpath>=0.82.2",
  "jinja2>=3.1.2",
  "colorama>=0.4.6",
  "httpx[http2]",
  "openai>=1.23.2",
  "certifi >= 14.05.14",
  "prometheus-client >= 0.13.1",
  "six >= 1.10",
  "requests >= 2.31.0",
  "typing-extensions >= 4.2.0",
  "astor >= 0.8.1",
  "shortuuid >= 1.0.11",
  "dacite >= 1.8.1",
  "pydantic_settings >= 2.6.0",
  "redis >= 4.8.0",
  "json_repair >= 0.30.1",
  "scenedetect >= 0.6.4",
  "pydub >= 0.25.1",
  "face_recognition >= 1.3.0"
]

[project.urls]
"Homepage" = "https://github.com/om-ai-lab/OmAgent"